pyquest/ql/test/semantic_analysis/invalid/test008.ql
// Different questions with equal identifier
form testForm {
	"First Question"
	someIdentifier : integer
	"Second Question"
	someIdentifier : decimal
}